syntax = "proto3";

//ask mentor where should be this proto
option csharp_namespace = "Lappka.Notification.Api";

import "google/protobuf/empty.proto";

package notification.protos;

service NotificationController {
  rpc ResetPassword(ResetPasswordRequest) returns (google.protobuf.Empty);
  rpc ConfirmEmail(ConfirmEmailRequest) returns (google.protobuf.Empty);
  rpc ChangeEmail(ChangeEmailRequest) returns (google.protobuf.Empty);
}

message ResetPasswordRequest{
  string email = 1;
  string token = 2;
}

message ConfirmEmailRequest{
  string email = 1;
  string token = 2;
}

message ChangeEmailRequest{
  string email = 1;
  string token = 2;
}